--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<app-menu *ngIf="router.url != '/login'"></app-menu>
+<div [ngClass]="{'generalContainer': router.url != '/login'}">
+  <router-outlet></router-outlet>
+</div>
+
