--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,7 +5,7 @@
   <div class="item" routerLink="/profile">
     Perfil
   </div>
-  <div class="item" routerLink="/login">
+  <div class="item" (click)="logout()">
     Salir
   </div>
 </div>
