--- a/src/styles.css
+++ b/src/styles.css
@@ -44,5 +44,8 @@
   display: block !important;
 }
 .generalContainer {
-  margin-top: 45px;
+  margin-top: 54px;
+}
+.pato45 {
+  padding-top: 45px;
 }
