--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,1 +1,33 @@
-<p>chat works!</p>
+<div id="conversationContainer">
+    <div class="contPrinc pato45">
+      <div class="row">
+        <div class="col-xs-3 bg-grey marle-25">
+          <div class="avatarFrameOnline ">
+            <img src="assets/img/generic_avatar.png" class=" homeAvatarPicture img-fluid">
+          </div>
+          <div class="avatarFrameOnline  marto250">
+            <img src="assets/img/generic_avatar.png"class=" homeAvatarPicture img-fluid">
+          </div>
+        </div>
+        <div class="col">
+                  <span><b>{{myUser.nick}} ({{myUser.status}})</b></span>
+          <div class="container">
+            <div class="chatContainer marto15">
+                          <!-- <div *ngFor="let msn of chat">
+                              <div class="exampleChat">
+                                  <span><b> {{msn.nick}}</b></span>
+                                  <p class="marle-25"> {{msn.message}}</p>
+                              </div>
+                          </div> -->
+            </div>
+            <div class="bottomChat">
+              <input id="textChat" type="area" class="form-control areaChat" placeholder="Escribe un mensaje">
+              <div class="marto15">
+                <img src="assets/img/zumbido.png"class="iconImage img-fluid">
+              </div>
+            </div> 
+          </div>
+        </div>
+      </div> 
+    </div>
+  </div>
