--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
         <input class="form-control"  type="text" placeholder="Buscar Amigo" [(ngModel)]="query">
       </div>
       <div class="col-md-auto">
-        <img src="assets/img/logo_live_add.png" class="icon">
+        <img src="assets/img/logo_live_add.png" class="icon" (click)="open(content)">
       </div>
     </div>
     <hr>
@@ -38,3 +38,21 @@
     </div>
   </div>
 </div>
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Agregar Amigo</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <b>Ingresa el correo de un amigo</b>
+    <input type="email" class="form-control" placeholder="Email"
+    [(ngModel)]="friendEmail"
+    (keyup.enter)="sendRequest(); modal.close('Ok click') ">
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="sendRequest(); modal.close('Ok click')">Guardar</button>
+  </div>
+</ng-template>
