--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-menu *ngIf="router.url != '/login'"></app-menu>
+<button (click)="addHomeScreen()" *ngIf="showButton">Add to Home Scree</button>
 <div [ngClass]="{'generalContainer': router.url != '/login'}">
   <router-outlet></router-outlet>
 </div>
